Bug 337523 - Previous/next tab keyboard shortcuts don't work
Summary: Previous/next tab keyboard shortcuts don't work
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: general (other bugs)
Version First Reported In: frameworks
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konversation Bugs
URL:
Keywords:
Depends on:
Blocks: 337512
  Show dependency treegraph
 
Reported: 2014-07-16 23:44 UTC by Lukáš Tinkl
Modified: 2014-08-11 16:29 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lukáš Tinkl 2014-07-16 23:44:26 UTC
Please bring back the functionality to be able to switch between channels using Alt+left/right keys
Comment 1 Peter Simonsson 2014-08-11 16:29:48 UTC
Git commit 4e39234eb6d7fb5da4b8b50bbe6eab5bcf72891a by Peter Simonsson.
Committed on 11/08/2014 at 16:29.
Pushed by psn into branch 'frameworks'.

Set all shortcuts for next/previous tab

M  +8    -12   src/mainwindow.cpp

http://commits.kde.org/konversation/4e39234eb6d7fb5da4b8b50bbe6eab5bcf72891a