Set all shortcuts for next/previous tab

BUG:337523